[package]
name = "dilawar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["blocking"] }
run_script = "0.10.1"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
tracing = "0.1.40"

[target."cfg(windows)".dependencies]
powershell_script = "1.1.0"
